--- a/web/chiq/eng-templates/templates/indir.html
+++ b/web/chiq/eng-templates/templates/indir.html
@@ -6,10 +6,10 @@
 {% block content %}
 <div class="indir">
     <div class="indirbasliklar">
-        <div class="indirbaslik kurulan selected">Kurulan CD</div>
-        <div class="indirbaslik calisan">Çalışan CD</div>
+        <div class="indirbaslik kurulan selected">Install CD</div>
+        <div class="indirbaslik calisan">Live CD</div>
     </div>
-    <div class="aciklama ustaciklama">Bir sürüm seçin</div>
+    <div class="aciklama ustaciklama">Choose a version</div>
     {% for download in downloads %}
     <div class="surum{% ifequal download.type 1 %} gizli calisanindir{% else %} kurulanindir{% endifequal %}" onclick="location.href='{{ download.link }}'">
         <div class="surumbaslik"><a href="{{ download.link }}">{{ download.title }}</a></div>
