--- a/web/chiq/eng-templates/templates/home.html
+++ b/web/chiq/eng-templates/templates/home.html
@@ -10,10 +10,10 @@
 <div class="part kutudis">
     <div class="kutuic">
         <div class="kutuliste">
-            <a href="#"><img id="kutu1" src="/media/resimler/kutu/metin_kurumsal02.png" alt="Kurumsal" /></a>
-            <a href="#"><img id="kutu2" src="/media/resimler/kutu/metin_bireysel01.png" alt="Bireysel" /></a>
-            <a href="#"><img id="kutu3" src="/media/resimler/kutu/metin_gelistirici01.png" alt="Geliştirici" /></a>
-            <a href="#"><img id="kutu4" src="/media/resimler/kutu/metin_cozumortaklari01.png" alt="Çözüm Ortakları" /></a>
+            <a href="#"><img id="kutu1" src="/media/resimler/kutu/metin_kurumsal02.png" alt="Enterprise" /></a>
+            <a href="#"><img id="kutu2" src="/media/resimler/kutu/metin_bireysel01.png" alt="Personal" /></a>
+            <a href="#"><img id="kutu3" src="/media/resimler/kutu/metin_gelistirici01.png" alt="Developer" /></a>
+            <a href="#"><img id="kutu4" src="/media/resimler/kutu/metin_cozumortaklari01.png" alt="Business Partner" /></a>
         </div>
     </div>
 </div>
@@ -30,6 +30,6 @@
 <div class="partEnd">
     <div class="aligner"> <a href="{{ bignews.0.get_absolute_url }}"><img src="{{ bignews.0.image.file.url }}" width="229" /></a><br />
         <span class="habertext">{{ bignews.0.sum|safe }}<br />
-            <a href="{{ bignews.0.get_absolute_url }}">Devam »</a></span> </div>
+            <a href="{{ bignews.0.get_absolute_url }}">Continue »</a></span> </div>
 </div>
 {% endblock %}
