--- a/web/chiq/eng-templates/templates/arama.html
+++ b/web/chiq/eng-templates/templates/arama.html
@@ -8,7 +8,7 @@
 {% if searched %}
 
 {% if news_list %}
-<h2>Haberler</h2>
+<h2>News</h2>
 <ul>
     {% for object in news_list %}
     <li><a href="{{ object.get_absolute_url }}">{{ object.title }}</a></li>
@@ -17,7 +17,7 @@
 {% endif %}
 
 {% if flatpage_list %}
-<h2>Sabit Sayfalar</h2>
+<h2>Static Pages</h2>
 <ul>
     {% for object in flatpage_list %}
     <li><a href="{{ object.get_absolute_url }}">{{ object.title }}</a></li>
