--- a/web/chiq/templates/base.html
+++ b/web/chiq/templates/base.html
@@ -21,7 +21,7 @@
 {% endblock %}
   </div>
 {% block sidebar %}
-  <div class="sidebar"><a href="/download/"><img src="/media/resimler/sidebar/indirdownload.png" /></a><br />
+  <div class="sidebar"><a href="/indir/"><img src="/media/resimler/sidebar/indirdownload.png" /></a><br />
     <div class="search">
         <form method="POST" action="/search/">
             <input type="text" name="term" />
