--- a/web/chiq/templates/base.html
+++ b/web/chiq/templates/base.html
@@ -12,7 +12,7 @@
 <div class="header"> <a class="parduslogo" href="/"></a>
   <div class="menu">
     <div class="linkler"> <a class="mUrun" href="/products/"></a> <a class="mHizmet" href="#"></a> <a class="mHakkinda" href="/about/"></a> </div>
-    <a class="mDil" href="#"></a> </div>
+    <a class="mDil" href="/eng"></a> </div>
 </div>
 <div id="wrapper">
 <div id="container">
