--- a/web/chiq/eng-templates/templates/base.html
+++ b/web/chiq/eng-templates/templates/base.html
@@ -9,7 +9,7 @@
     {% block extrahead %}{% endblock %}
 </head>
 <body>
-<div class="header"> <a class="parduslogo" href="/"></a>
+<div class="header"> <a class="parduslogo" href="/eng"></a>
   <div class="menu">
     <div class="linkler"> <a class="mUrun" href="/products/"></a> <a class="mHizmet" href="#"></a> <a class="mHakkinda" href="/eng/about/"></a> </div>
     <a class="mDil" href="/"></a> </div>
