--- a/web/chiq/eng-templates/templates/base.html
+++ b/web/chiq/eng-templates/templates/base.html
@@ -9,10 +9,10 @@
     {% block extrahead %}{% endblock %}
 </head>
 <body>
-<div class="header"> <a class="parduslogo" href="/eng"></a>
+<div class="header"> <a class="parduslogo parduslogo_en" href="/eng"></a>
   <div class="menu">
-    <div class="linkler"> <a class="mUrun" href="/products/"></a> <a class="mHizmet" href="#"></a> <a class="mHakkinda" href="/eng/about/"></a> </div>
-    <a class="mDil" href="/"></a> </div>
+    <div class="linkler"> <a class="mUrun_en" href="/products/"></a> <a class="mHizmet_en" href="#"></a> <a class="mHakkinda_en" href="/eng/about/"></a> </div>
+    <a class="mDil_en" href="/"></a> </div>
 </div>
 <div id="wrapper">
 <div id="container">
