--- a/web/chiq/eng-templates/templates/home.html
+++ b/web/chiq/eng-templates/templates/home.html
@@ -18,7 +18,7 @@
     </div>
 </div>
 <div class="part">
-    <div class="mbaslik"><a href="/haber/"<img src="/media/resimler/mbaslik/haberler.png"/></a></div>
+    <div class="mbaslik"><a href="/haber/"><img src="/media/resimler/mbaslik/haberler.png"/></a></div>
 {% for news in news %}
   <div class="habercontain">
       <div class="haberpic"><img src="/media/resimler/mbaslik/news-icon.png" width="24" height="24" alt="{{ news.title }}" /></div>
