--- a/web/chiq/eng-templates/templates/base.html
+++ b/web/chiq/eng-templates/templates/base.html
@@ -11,7 +11,7 @@
 <body>
 <div class="header"> <a class="parduslogo parduslogo_en" href="/eng"></a>
   <div class="menu">
-    <div class="linkler"> <a class="mUrun_en" href="/products/"></a> <a class="mHizmet_en" href="#"></a> <a class="mHakkinda_en" href="/eng/about/"></a> </div>
+    <div class="linkler"> <a class="mUrun_en" href="/eng/products/"></a> <a class="mHizmet_en" href="#"></a> <a class="mHakkinda_en" href="/eng/about/"></a> </div>
     <a class="mDil_en" href="/"></a> </div>
 </div>
 <div id="wrapper">
@@ -23,7 +23,7 @@
 {% block sidebar %}
   <div class="sidebar"><a href="/eng/download/"><img src="/media/resimler/sidebar/indirdownload.png" /></a><br />
     <div class="search">
-        <form method="POST" action="/search/">
+        <form method="POST" action="/eng/search/">
             <input type="text" name="term" />
             <input type="submit" name="searchform" value="">
         </form>
