--- a/trunk/web/chiq/eng-templates/templates/base.html
+++ b/trunk/web/chiq/eng-templates/templates/base.html
@@ -51,7 +51,7 @@
 {% endblock %}
 </div>
 <div class="linksbar">
-    <a href="http://uekae.tubitak.gov.tr"><div class="altbolum_resim1"><img src="/media/resimler/altmenu/01.png" alt="TÜBİTAK/UEKAE" /></div><div class="altbolum_sag1"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/tubitakuekae.png" alt="TÜBİTAK/UEKAE" /></div><div class="altbolum_yazi">About our<br />institution</div></div></a>
+    <a href="http://uekae.tubitak.gov.tr/home.do?ot=10&lang=en"><div class="altbolum_resim1"><img src="/media/resimler/altmenu/01.png" alt="TÜBİTAK/UEKAE" /></div><div class="altbolum_sag1"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/tubitakuekae.png" alt="TÜBİTAK/UEKAE" /></div><div class="altbolum_yazi">About our<br />institution</div></div></a>
     <a href="/eng/press/"><div class="altbolum_resim2"><img src="/media/resimler/altmenu/02.png" alt="Press" /></div><div class="altbolum_sag2"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/press.png" alt="Press" /></div><div class="altbolum_yazi">Pardus news in press <br />and press releases</div></div></a>
     <a href="/eng/career/"><div class="altbolum_resim3"><img src="/media/resimler/altmenu/03.png" alt="Career" /></div><div class="altbolum_sag3"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/career.png" alt="Career" /></div><div class="altbolum_yazi">Position openings <br />in Pardus</div></div></a>
     <a href="/eng/legal/"><div class="altbolum_resim4"><img src="/media/resimler/altmenu/04.png" alt="Legall" /></div><div class="altbolum_sag4"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/legal.png" alt="Legal" /></div><div class="altbolum_yazi">Privacy policy <br />and copyrights</div></div></a>
