--- a/web/chiq/eng-templates/templates/basin/bultenlervegorseller.html
+++ b/web/chiq/eng-templates/templates/basin/bultenlervegorseller.html
@@ -9,7 +9,7 @@
     <div class="gorsel_kutusu_satir">
     <img src="/media/resimler/basin/logotescil.png" alt="pardus logo" />
     <div class="gorsel_kutusu_sag">
-        <b>Pardus Patented Logos</b><br />
+        <b>Pardus Registered Trademarks</b><br />
         (JPG, EPS, PNG, SVG, AI)
     </div>
     </div>
