--- a/web/chiq/eng/templates/home.html
+++ b/web/chiq/eng/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block extrahead %}
 <script type="text/javascript" src="/media/js/jquery-1.2.6.min.js"></script>
-<script type="text/javascript" src="/media/js/home.js"></script>
+<script type="text/javascript" src="/media/js/home_en.js"></script>
 {% endblock %}
 {% block content %}
 {% for news in mainnews %}
