--- a/trunk/web/chiq/eng/templates/indir.html
+++ b/trunk/web/chiq/eng/templates/indir.html
@@ -16,6 +16,6 @@
         <div class="aciklama">{{ download.description }}</div>
     </div>
     {% endfor %}
-    <div class="indiralt">{{ version.name }} sürümü hakkında bilgi almak için <a href="{{ version.get_release_notes_url }}">sürüm notları</a> belgesini okuyabilirsiniz.</div>
+    <div class="indiralt">You may refer to the <a href="{{ version.get_release_notes_url }}">release notes</a> to see what's new and unique in{{ version.name }}.</div>
 </div>
 {% endblock %}
