--- a/web/chiq/eng/templates/home.html
+++ b/web/chiq/eng/templates/home.html
@@ -8,12 +8,12 @@
 <a href="{{ news.get_absolute_url }}"><img src="{{ news.image.file.url }}" alt="{{ news.title }}"/></a>
 {% endfor %}
 <div class="part kutudis">
-    <div class="kutuic">
+    <div class="kutuic kutuic_en">
         <div class="kutuliste">
-            <a href="#"><img id="kutu1" src="/media/resimler/kutu/metin_kurumsal02.png" alt="Enterprise" /></a>
-            <a href="#"><img id="kutu2" src="/media/resimler/kutu/metin_bireysel01.png" alt="Personal" /></a>
-            <a href="#"><img id="kutu3" src="/media/resimler/kutu/metin_gelistirici01.png" alt="Developer" /></a>
-            <a href="#"><img id="kutu4" src="/media/resimler/kutu/metin_cozumortaklari01.png" alt="Solution Partner" /></a>
+            <a href="#"><img id="kutu1" src="/media/resimler/kutu/corporate_02.png" alt="Enterprise" /></a>
+            <a href="#"><img id="kutu2" src="/media/resimler/kutu/enduser_01.png" alt="Personal" /></a>
+            <a href="#"><img id="kutu3" src="/media/resimler/kutu/developer_01.png" alt="Developer" /></a>
+            <a href="#"><img id="kutu4" src="/media/resimler/kutu/partner_01.png" alt="Solution Partner" /></a>
         </div>
     </div>
 </div>
