--- a/web/chiq/media/css/stil.css
+++ b/web/chiq/media/css/stil.css
@@ -372,6 +372,9 @@ body {
 .surum:hover {
     background-image: url(/media/resimler/indir/indirbuton.png);
 }
+.surum_en:hover {
+    background-image: url(/media/resimler/indir/download.png);
+}
 .surum:hover a, .surum:hover .aciklama {
     color: white;
 }
