--- a/web/chiq/templates/base.html
+++ b/web/chiq/templates/base.html
@@ -43,7 +43,7 @@
       <div class="fayrac"></div>
       <div class="featuresList">
         <div class="featurePic"><img src="/media/resimler/sidebar/features/tanit.png" width="40" height="50" /></div>
-        <div class="featureText"> <span class="fbaslik"><a href="/banner/">Pardus'u Tanıtın</a></span><br/>
+        <div class="featureText"> <span class="fbaslik"><a href="/tanitin/">Pardus'u Tanıtın</a></span><br/>
             <span class="ftext">Pardus'un tanıtımına katkıda bulunmak için Pardus afiş ve düğmeleri</span> </div>
       </div>
     </div>
