--- a/web/chiq/eng/templates/base.html
+++ b/web/chiq/eng/templates/base.html
@@ -31,7 +31,7 @@
     <div class="features">
       <div class="featuresList">
         <div class="featurePic"><img src="/media/resimler/sidebar/features/destek.png" width="40" height="50" /></div>
-        <div class="featureText"> <span class="fbaslik"><a href="/eng/guide/">Installation Guide</a></span><br/>
+        <div class="featureText"> <span class="fbaslik"><a href="#">Installation Guide</a></span><br/>
             <span class="ftext">Step by step installation and usage guide <br /> with screen shots.</span> </div>
       </div>
       <div class="fayrac"></div>
