--- a/web/chiq/eng/templates/base.html
+++ b/web/chiq/eng/templates/base.html
@@ -11,7 +11,7 @@
 <body>
 <div class="header"> <a class="parduslogo parduslogo_en" href="/eng"></a>
   <div class="menu">
-    <div class="linkler"> <a class="mUrun_en" href="/eng/products/"></a> <a class="mHizmet_en" href="#"></a> <a class="mHakkinda_en" href="/eng/about/"></a> </div>
+    <div class="linkler"> <a class="mUrun_en" href="#"></a> <a class="mHizmet_en" href="#"></a> <a class="mHakkinda_en" href="#"></a> </div>
     <a class="mDil_en" href="/"></a> </div>
 </div>
 <div id="wrapper">
@@ -43,7 +43,7 @@
       <div class="fayrac"></div>
       <div class="featuresList">
         <div class="featurePic"><img src="/media/resimler/sidebar/features/tanit.png" width="40" height="50" /></div>
-        <div class="featureText"> <span class="fbaslik"><a href="/eng/spread/">Spread Pardus</a></span><br/>
+        <div class="featureText"> <span class="fbaslik"><a href="#">Spread Pardus</a></span><br/>
             <span class="ftext">Banners and buttons for spreading Pardus</span> </div>
       </div>
     </div>
