--- a/web/chiq/eng/templates/home.html
+++ b/web/chiq/eng/templates/home.html
@@ -30,6 +30,6 @@
 <div class="partEnd">
     <div class="aligner"> <a href="{{ bignews.0.get_absolute_url }}"><img src="{{ bignews.0.image.file.url }}" width="229" /></a><br />
         <span class="habertext">{{ bignews.0.sum|safe }}<br />
-            <a href="{{ bignews.0.get_absolute_url }}">Continue »</a></span> </div>
+            <!-- <a href="{{ bignews.0.get_absolute_url }}">Continue »</a> --></span> </div>
 </div>
 {% endblock %}
