--- a/web/chiq/eng/templates/news/news_detail.html
+++ b/web/chiq/eng/templates/news/news_detail.html
@@ -6,5 +6,5 @@
     <div class="haber_ozet">{{ news.sum|safe }}</div>
     <div class="haber_metin">{{ news.text|safe }}</div>
 </div>
-<p><a href="{{ news.get_printable_url }}">Yazdır</a></p>
+<p><a href="{{ news.get_printable_url }}">Print</a></p>
 {% endblock %}
