--- a/web/chiq/templates/500.html
+++ b/web/chiq/templates/500.html
@@ -1,3 +1,6 @@
-<p>*** Sitemiz güncellenme aşamasındadır.. Eksik içeriklerin tamamlanması için gerekli çalışmalar yürütülmektedir.</p>
+{% extends "base.html" %}
+
+{% block content %}
+<p>Aradığınız sayfaya ulaşılamadı! Lütfen sistem yöneticisine haber verin.</p>
 <p> </p>
-<p>-- Pardus Web Tasarım Ekibi</p>
+{% endblock %}
