--- a/web/chiq/eng/templates/404.html
+++ b/web/chiq/eng/templates/404.html
@@ -1,3 +1,6 @@
-<p>Sorry for the inconvenience we've caused. We're working hard to get the page done.</p>
+{% extends "base.html" %}
+
+{% block content %}
+<p>Sorry, page not found!</p>
 <p> </p>
-<p>-- Pardus Web Team</p>
+{% endblock %}
