--- a/trunk/web/chiq/eng/templates/arama.html
+++ b/trunk/web/chiq/eng/templates/arama.html
@@ -20,7 +20,7 @@
 <h2>Static Pages</h2>
 <ul>
     {% for object in flatpage_list %}
-    <li><a href="{{ object.get_absolute_url }}">{{ object.title }}</a></li>
+    <li><a href="/{{ object.get_absolute_url }}">{{ object.title }}</a></li>
     {% endfor %}
 </ul>
 {% endif %}
