--- a/web/chiq/eng/templates/base.html
+++ b/web/chiq/eng/templates/base.html
@@ -32,19 +32,19 @@
       <div class="featuresList">
         <div class="featurePic"><img src="/media/resimler/sidebar/features/destek.png" width="40" height="50" /></div>
         <div class="featureText"> <span class="fbaslik"><a href="#">Installation Guide</a></span><br/>
-            <span class="ftext">Step by step installation and usage guide <br /> with screen shots.</span> </div>
+            <span class="ftext">Step by step installation and usage guide <br /> with screenshots.</span> </div>
       </div>
       <div class="fayrac"></div>
       <div class="featuresList">
         <div class="featurePic"><img src="/media/resimler/sidebar/features/destek.png" width="40" height="50" /></div>
         <div class="featureText"> <span class="fbaslik"><a href="/eng/support/">Get Support</a></span><br/>
-            <span class="ftext">You can make use of community sources for Pardus support.</span> </div>
+            <span class="ftext">Community sources for Pardus support.</span> </div>
       </div>
       <div class="fayrac"></div>
       <div class="featuresList">
         <div class="featurePic"><img src="/media/resimler/sidebar/features/tanit.png" width="40" height="50" /></div>
         <div class="featureText"> <span class="fbaslik"><a href="#">Spread Pardus</a></span><br/>
-            <span class="ftext">Banners and buttons for spreading Pardus</span> </div>
+            <span class="ftext">Banners and buttons to help spread Pardus.</span> </div>
       </div>
     </div>
   </div>
@@ -54,8 +54,8 @@
     <a href="http://uekae.tubitak.gov.tr/home.do?ot=10&lang=en"><div class="altbolum_resim1"><img src="/media/resimler/altmenu/01.png" alt="TÜBİTAK/UEKAE" /></div><div class="altbolum_sag1"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/tubitakuekae.png" alt="TÜBİTAK/UEKAE" /></div><div class="altbolum_yazi">About our<br />institution</div></div></a>
     <a href="/eng/press/"><div class="altbolum_resim2"><img src="/media/resimler/altmenu/02.png" alt="Press" /></div><div class="altbolum_sag2"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/press.png" alt="Press" /></div><div class="altbolum_yazi">Pardus news in press <br />and press releases</div></div></a>
     <a href="#"><div class="altbolum_resim3"><img src="/media/resimler/altmenu/03.png" alt="Career" /></div><div class="altbolum_sag3"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/career.png" alt="Career" /></div><div class="altbolum_yazi">Position openings <br />in Pardus</div></div></a>
-    <a href="#"><div class="altbolum_resim4"><img src="/media/resimler/altmenu/04.png" alt="Legall" /></div><div class="altbolum_sag4"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/legal.png" alt="Legal" /></div><div class="altbolum_yazi">Privacy policy <br />and copyrights</div></div></a>
-    <a href="/eng/contact/"><div class="altbolum_resim5"><img src="/media/resimler/altmenu/05.png" alt="İletişim" /></div><div class="altbolum_sag5"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/contact.png" alt="Contact Us" /></div><div class="altbolum_yazi">How to contact with Pardus Project?</div></div></a>
+    <a href="#"><div class="altbolum_resim4"><img src="/media/resimler/altmenu/04.png" alt="Legal" /></div><div class="altbolum_sag4"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/legal.png" alt="Legal" /></div><div class="altbolum_yazi">Privacy policy <br />and copyrights</div></div></a>
+    <a href="/eng/contact/"><div class="altbolum_resim5"><img src="/media/resimler/altmenu/05.png" alt="Contact Us" /></div><div class="altbolum_sag5"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/contact.png" alt="Contact Us" /></div><div class="altbolum_yazi">How to contact with Pardus Project?</div></div></a>
 </div>
   <div class="footer">
       <div class="copy"><div class="adres">TUBITAK - UEKAE, POB 74 41470, Gebze, Kocaeli / Turkey. &nbsp;&nbsp;&nbsp;&nbsp; <a href="/eng/legal/">Legal</a></div><span class="footerNav"><a href="/eng/products/">Products</a>   /   <a href="/services/">Services</a>   /   <a href="/eng/about/">About Us</a></span></div>
