--- a/trunk/web/chiq/eng/templates/indir.html
+++ b/trunk/web/chiq/eng/templates/indir.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block extrahead %}
 <script type="text/javascript" src="/media/js/jquery-1.2.6.min.js"></script>
-<script type="text/javascript" src="/media/js/indir.js"></script>
+<script type="text/javascript" src="/media/js/indir_en.js"></script>
 {% endblock %}
 {% block content %}
 <div class="indir">
