--- a/web/chiq/eng/templates/basin/bultenlervegorseller.html
+++ b/web/chiq/eng/templates/basin/bultenlervegorseller.html
@@ -10,7 +10,7 @@
     <img src="/media/resimler/basin/logotescil.png" alt="pardus logo" />
     <div class="gorsel_kutusu_sag">
         <b>Pardus Registered Trademarks</b><br />
-        (JPG, EPS, PNG, SVG, AI)
+        <p>(<a href="/media/dosya/prds-logo.jpg">JPG</a>, <a href="/media/dosya/pardus-tescil.eps">EPS</a>, <a href="/media/dosya/pardus-tescil.png">PNG</a>, <a href="/media/dosya/pardus-tescil.pdf">PDF</a>, <a href="/media/dosya/pardus-tescil.ai">AI</a>)</p>
     </div>
     </div>
     <div class="gorsel_kutusu_satir">
@@ -18,9 +18,9 @@
     <div class="gorsel_kutusu_sag">
         <b>Pardus 2009 CD Stickers</b><br /><br />
         <b>Installation CD</b><br />
-        <p>(<a href="/media/dosya/gobek2009.jpg">JPG</a>, <a href="/media/dosya/gobek2009.eps">EPS</a>, <a href="/media/dosya/gobek2009.png">PNG</a>, <a href="/media/dosya/gobek2009.pdf">PDF</a>, <a href="/media/dosya/gobek2009_kurulan.ai">AI</a>)</p>
+        <p>(<a href="/media/dosya/gobek2009_kurulan_en.jpg">JPG</a>, <a href="/media/dosya/gobek2009_kurulan_en.eps">EPS</a>, <a href="/media/dosya/gobek2009_kurulan_en.png">PNG</a>, <a href="/media/dosya/gobek2009_kurulan_en.pdf">PDF</a>, <a href="/media/dosya/gobek2009_kurulan_en.ai">AI</a>)</p>
         <b>Live CD</b><br />
-        <p>(JPG, EPS, PNG, SVG, AI)</p>
+        <p>(<a href="/media/dosya/gobek2009_en.jpg">JPG</a>, <a href="/media/dosya/gobek2009_en.eps">EPS</a>, <a href="/media/dosya/gobek2009_en.png">PNG</a>, <a href="/media/dosya/gobek2009_en.pdf">PDF</a>, <a href="/media/dosya/gobek2009_en.ai">AI</a>)</p>
     </div>
     </div>
     <div class="gorsel_kutusu_satir" style="padding-top:10px;">
